--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "4.2.4"
   },
   "dependencies": {
-    "bcrypt": "^0.8.6",
+    "bcrypt-node": "^0.1.0",
     "nodal": "0.9.0"
   },
   "devDependencies": {
