--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "bcrypt-node": "^0.1.0",
-    "nodal": "0.9.0"
+    "nodal": "^0.10.0"
   },
   "devDependencies": {
     "chai": "~3.5.0",
